@@ -1,6 +1,6 @@
 /*   File      : /afs/psi.ch/user/f/flechsig/phase/src/phase/phasec.c */
 /*   Date      : <24 Jun 02 09:51:36 flechsig>  */
-/*   Time-stamp: <18 Feb 04 16:45:33 flechsig>  */
+/*   Time-stamp: <20 Feb 04 08:41:34 flechsig>  */
 /*   Author    : Uwe Flechsig, flechsig@psi.ch */
 
 /*   $Source$  */
@@ -39,11 +39,9 @@
 #include "rtrace.h"
 #include "version.h"
 
-void BatchMode(char *fname, int cmode)
+void BatchMode(char *fname, int cmode, int selected)
 /* Uwe 2.10.96 */
 /* Batchmodus */
-/* modification: 14 Oct 97 13:41:13 flechsig */
-/* modification: 23 Oct 97 07:47:23 flechsig */
 {
   printf("BatchMode: datafilename  : %s\n", PHASESet.beamlinename);
   printf("BatchMode: resultfilename: %s\n", PHASESet.imageraysname);
@@ -76,9 +74,13 @@ void BatchMode(char *fname, int cmode)
       WriteRayFile(PHASESet.imageraysname, &Beamline.RESULT.points,
 		   Beamline.RESULT.RESUnion.Rays); 
       break;
-    case 5:
-      printf("BatchMode: Footprint Ray Tracing\n");
+    case 4:
+      printf("BatchMode: Footprint at element %d\n", selected);
+      Beamline.position= selected;
+      MakeRTSource(&PHASESet, &Beamline);
       Footprint(&Beamline, Beamline.position);
+      WriteRayFile(PHASESet.imageraysname, &Beamline.RESULT.points,
+		   Beamline.RESULT.RESUnion.Rays);
       break;
     case 3: 
       printf("BatchMode: Phase Space Transformation\n");
@@ -119,14 +121,13 @@ void FixFocus(double cff, double lambda, double ldens, int m,
 int ProcComandLine(unsigned int ac, char *av[])
 /* Uwe 2.10.96 */
 /* Wertet Kommandozeile aus */
-/* modification: 14 Oct 97 13:29:39 flechsig */
-/* modification: 23 Oct 97 07:48:12 flechsig */
 {
-  int  ret, i, cmode;
+  int  ret, i, cmode, selected;
   char *ch, *dfname, *resultname, *pfname; 
   
   i= ret= 1;
   cmode= -1;
+  selected= -1;
   /* defaults */
   pfname=     (char *) MainPickName; 
   resultname= (char *) PHASESet.imageraysname;
@@ -146,6 +147,12 @@ int ProcComandLine(unsigned int ac, char *av[])
 	  ch++; 
 	  sscanf(ch, "%d", &cmode);
 	  printf("ProcComandLine: calculation mode: %d\n", cmode);
+	  break;
+	case 'S':             /* selected element */
+	case 's':
+	  ch++; 
+	  sscanf(ch, "%d", &selected);
+	  printf("ProcComandLine: selected element: %d\n", selected);
 	  break;
 	case 'F':
 	case 'f':
@@ -176,6 +183,8 @@ int ProcComandLine(unsigned int ac, char *av[])
 	  printf("                                  1: ray trace\n");
 	  printf("                                  2: full ray trace\n");
 	  printf("                                  3: phase space density\n");
+	  printf("                                  4: footprint (requires option s)\n");
+	  printf("                -s, -Snumber:     selected element number (for footprint)\n");
 	  exit(3);
 	  break;
 	default: 
@@ -186,7 +195,7 @@ int ProcComandLine(unsigned int ac, char *av[])
 
   if (ret == -8)
     {
-      BatchMode(pfname, cmode);
+      BatchMode(pfname, cmode, selected);
       exit(3);
     }
   return ret;
