@@ -1,6 +1,6 @@
 /*   File      : /afs/psi.ch/user/f/flechsig/phase/src/phase/version.h */
 /*   Date      : <25 Jun 02 07:56:56 flechsig>  */
-/*   Time-stamp: <19 Feb 04 11:19:32 flechsig>  */
+/*   Time-stamp: <20 Feb 04 08:50:20 flechsig>  */
 /*   Author    : Uwe Flechsig, flechsig@psi.ch */
 
 /*   $Source$  */
@@ -10,8 +10,8 @@
 
 #ifndef VERSION_H
   #define VERSION_H
-  #define              VERSION_STRING        "1.15" 
-  #define              VERSION_DATE          "19-FEB-2004"
+  #define              VERSION_STRING        "1.16" 
+  #define              VERSION_DATE          "20-FEB-2004"
 #endif    /* VERSION_H */   
 
 /* end version.h */
