@@ -57,5 +57,6 @@ Initialisierungsfehler bei ell. Elementen behoben
           include misalignment
 	  remove noise from debug screen 
           configure with --enable-debug for verbose output
+20 Feb 04 footprint available in batch mode
 ****************    end of NEWS  *****************           
 **************************************************
